# service-monitor

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/models/: events.py  status.py
app/providers/: base.py  openai.py
app/routes/: events.py  incidents.py  status.py
app/services/: event_bus.py  poller.py
tests/: conftest.py  test_poller.py  test_routes.py
